@@ -23,6 +23,7 @@ Enhancements
  * New DHCP fingerprints for Polycom and Snom
  * New controllerIp network device parameter will make it simpler to support
    wireless hardware working in bridged mode
+ * Developer documentation to add Floating Network Devices support to switches
 
 Bug fixes
  * Fixed nessus scans don't work with bin/pfcmd as a setuid/setgid (#1087)
